# DodoEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Core/: CMakeLists.txt
Core/Source/: DodoEngine.h  pch.h
Core/Source/Bindings/: Event.h  Func.h  Signal.h
Core/Source/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Hash.cpp  Hash.h  Hasher.cpp  Hasher.h  Platform.cpp  Platform.h  RenderThread.cpp  RenderThread.h  Thread.cpp  Thread.h  ThreadPolicy.h  ThreadingPolicy.h  Timestep.cpp  Timestep.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Core/Source/Diagnostics/: Log.cpp  Log.h  Stopwatch.cpp  Stopwatch.h
Core/Source/Drivers/Vulkan/: Vulkan.h  VulkanAllocator.cpp  VulkanAllocator.h  VulkanContext.cpp  VulkanContext.h  VulkanDebugMessenger.cpp  VulkanDebugMessenger.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceDriver.cpp  VulkanDeviceDriver.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRenderApi.cpp  VulkanRenderApi.h  VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Core/Source/Drivers/Vulkan/Shaders/: VulkanShader.cpp  VulkanShader.h  VulkanShaderCompiler.cpp  VulkanShaderCompiler.h
Core/Source/Input/: Input.cpp  Input.h  KeyCode.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  MouseCode.h
Core/Source/Memory/: Allocator.h  Buffer.cpp  Buffer.h  ByteBuffer.cpp  ByteBuffer.h  Ref.h
Core/Source/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsRenderThread.cpp  WindowsRenderThread.h  WindowsThread.cpp  WindowsThread.h  WindowsWindow.cpp  WindowsWindow.h
Core/Source/Renderer/: RenderApi.h  RenderApiType.h  RenderCommandBuffer.cpp  RenderCommandBuffer.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderDeviceDriver.cpp  RenderDeviceDriver.h  RenderDeviceType.h  RenderSettings.h  RenderThread.cpp  RenderThread.h  Renderer.cpp  Renderer.h  RendererApi.h  RendererApiType.h  Swapchain.cpp  Swapchain.h  VSyncMode.h  VertexBuffer.cpp  VertexBuffer.h
Core/Source/Renderer/Shaders/: Shader.cpp  Shader.h
Dodo/: CMakeLists.txt  pch.h
Dodo/Bindings/: Func.h
Dodo/Concurrency/: Thread.cpp  Thread.h
Dodo/Core/: Event.cpp  Event.h  File.cpp  File.h  Hash.cpp  Hash.h  core.h  display.cpp  display.h  engine.cpp  engine.h  entry_point.cpp  func.h  thread_pool.cpp  thread_pool.h  window.cpp  window.h
Dodo/Diagnostics/: Stopwatch.cpp  Stopwatch.h  log.cpp  log.h
Dodo/Drivers/Vulkan/: VulkanAdapter.cpp  VulkanAllocator.cpp  VulkanAllocator.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderCache.cpp  VulkanShaderCache.h  VulkanShaderCompiler.cpp  VulkanShaderCompiler.h  VulkanShaderPreprocessor.cpp  VulkanShaderPreprocessor.h  VulkanShaderUtils.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUtils.h
Dodo/Input/: Input.h  Keyboard.h
Dodo/Renderer/: Buffer.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderHandle.h  RenderThread.cpp  RenderThread.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SwapChain.h  VSyncMode.h  render_command_queue.cpp  render_command_queue.h  render_context.cpp  render_context.h  render_engine.cpp  render_engine.h  render_handle.h  render_thread.cpp  render_thread.h
Dodo/Renderer/vulkan/: VulkanAdapter.cpp  VulkanAdapter.h  VulkanAllocator.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanInstance.h  VulkanShaderCompiler.cpp  VulkanShaderPreprocessor.cpp  VulkanShaderUtils.h  VulkanSwapChain.cpp  VulkanSwapChain.h  render_context_vulkan.cpp  render_context_vulkan.h  renderer_vulkan.cpp  renderer_vulkan.h  vulkan_context.cpp  vulkan_context.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_utils.h
Dodo/core/: core.h  display.cpp  display.h  engine.cpp  engine.h  entry_point.cpp  thread_pool.cpp  thread_pool.h
Dodo/diagnostics/: log.cpp  log.h
Dodo/memory/: ref.h
Dodo/renderer/: render_backend.h  render_context.cpp  render_context.h  render_device.h  render_handle.cpp  render_handle.h  render_handle_owner.h  renderer.h
Dodo/renderer/vulkan/: render_backend_vulkan.cpp  render_backend_vulkan.h  render_context_vulkan.cpp  render_context_vulkan.h  render_device_vulkan.cpp  render_device_vulkan.h  renderer_vulkan.cpp  renderer_vulkan.h  vulkan_utils.h
Sandbox/: CMakeLists.txt
Sandbox/Source/: Sandbox.cpp
dodo/: CMakeLists.txt  pch.h
dodo/Input/: Input.cpp
dodo/Memory/: ref.h
dodo/bindings/: func.h
dodo/concurrency/: thread.cpp  thread.h
dodo/core/: engine.cpp  engine.h  file.cpp  file.h  hash.cpp  hash.h  window.cpp  window.h
dodo/diagnostics/: log.h  stopwatch.cpp  stopwatch.h
dodo/graphics/: buffer.h  buffer_usage.h  render_command_queue.cpp  render_command_queue.h  render_thread.cpp  render_thread.h  renderer.cpp  renderer.h  rid.h  swapchain.cpp  swapchain.h  vsync_mode.h
dodo/graphics/drivers/vulkan/: vulkan.h  vulkan_adapter.cpp  vulkan_adapter.h  vulkan_allocator.cpp  vulkan_allocator.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_swapchain.cpp  vulkan_swapchain.h
